6989190: SO_SNDBUF/SO_RCVBUF limits should only be checked when setsockopt fails (sol)

Reviewed-by: chegar, michaelm